--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -2,7 +2,7 @@
   background-image: url("../bgimg.jpg");
   background-position: center;
   object-fit: contain;
-  width: 100vw;
+  max-width: 100vw;
   height: 90vh;
   background-blend-mode: multiply;
   background-color: rgb(59 130 246 / 0.5);
